# CmakeTemplate

./: CMakeLists.txt  README.md
include/: trail_header.hpp
src/: gpu.cu  main.cc  trail.cc
